# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: cli.py  diff_builder.py  file_parser.py  gendiff.py  generate_diff.py  json_formatter.py  plain_formatter.py  stylish_formatter.py
gendiff/formatters/: __init__.py  plain_formatter.py  stylish_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_cli.py  test_gendiff_json.py  test_gendiff_yml.py  test_generate_diff.py
tests/test_data/: result_deep_tree_json.txt
tests/test_data/generate_diff/: result_empty_first_file.txt
